// Copyright 2024 Flant JSC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "pb/dhctl";

package dhctl;

enum Continue {
  CONTINUE_UNSPECIFIED = 0;
  CONTINUE_NEXT_PHASE = 1;
  CONTINUE_STOP_OPERATION = 2;
  CONTINUE_ERROR = 3;
}

message Logs {
  repeated string logs = 1;
}

message OperationOptions {
  repeated string skip_preflight_checks = 1;
}
